# ksef2-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  architecture.mermaid  hosted-bindings.example.json  justfile  opencode.json  pyproject.toml  pyrightconfig.json
src/ksef2_mcp/: __init__.py  __main__.py  application.py  auth.py  config.py  contracts.py  domain.py  errors.py  main.py  providers.py  server.py
src/ksef2_mcp/adapters/: adapters.py  draft_store.py  uow.py
src/ksef2_mcp/adapters/database/: __init__.py  orm.py  repository.py  session.py  uow.py
src/ksef2_mcp/demo/: __init__.py  standard_service_invoice.py
src/ksef2_mcp/domain/: __init__.py  common.py  drafts.py  enums.py  models.py  outputs.py
src/ksef2_mcp/ports/: repository.py
src/ksef2_mcp/services/: __init__.py  annotations.py  authenticated_client.py  builder.py  drafts.py  invoice_downloads.py  permissions.py  runtime.py  sessions.py  tokens.py
src/ksef2_mcp/tools/: __init__.py  builder.py  drafts.py  permissions.py  sessions.py  tokens.py
tests/: conftest.py  test_application.py  test_builder_service.py  test_builder_tools.py  test_config.py  test_demo_standard_service_invoice.py  test_draft_tools.py  test_drafts_runtime.py  test_invoice_downloads.py  test_invoice_services.py  test_permission_service.py  test_server.py  test_session_services.py  test_session_tools.py  test_token_services.py  test_token_tools.py  test_tools.py
tests/fixtures/: valid_fa3_invoice.xml
typestubs/mcp/server/: fastmcp.pyi
