[project]
name = "ksef2-mcp"
version = "0.1.0"
description = "Thin MCP adapter for task-oriented KSeF workflows built on ksef2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ksef2>=0.1.0",
  "mcp>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "basedpyright>=1.31.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksef2_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src", "tests"]
stubPath = "typestubs"
reportUnusedFunction = "none"
reportMissingModuleSource = "none"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src", "tests"]
stubPath = "typestubs"
reportUnusedFunction = "none"
reportMissingModuleSource = "none"
