[project]
name = "ksef2-mcp"
version = "0.1.0"
description = "MCP server for KSeF built on top of the ksef2 SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ksef2>=0.9.0",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
ksef2-mcp = "ksef2_mcp:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
