[project]
name = "ksef2-mcp"
version = "0.1.0"
description = "MCP server for KSeF built on top of the ksef2 SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "ksef2>=0.11.2",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[project.scripts]
ksef2-mcp = "ksef2_mcp:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
ksef2 = { git = "https://github.com/artpods56/ksef2.git", tag = "v0.11.2" }
